cmake_minimum_required(VERSION 3.15)
project(FileOperation C)

set(CMAKE_C_STANDARD 99)

add_executable(FileOperation1 file_1.c )
add_executable(FileOperation2 file_2.c )
add_executable(FileOperation3 file_3.c )
add_executable(FileOperation4 file_4.c)
add_executable(FileOperation5 file_5.c)
add_executable(FileOperation6 file_6.c)
